Now it can check horizontal rows lets not forget vertical rows

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
       <table id="tictactoeTable">
         <tr>
           <div id="topRow">
-            <th>1<img onclick="changeImage(this)"/></th>
-            <th>2<img onclick="changeImage(this)"/></th>
-            <th>3<img onclick="changeImage(this)"/></th>
+            <th>1<img id="1" onclick="changeImage(this, 1)"/></th>
+            <th>2<img id="2" onclick="changeImage(this, 2)"/></th>
+            <th>3<img id="3" onclick="changeImage(this, 3)"/></th>
           </div>
         </tr>
         <tr>
           <div id="middleRow">
-            <th>4<img onclick="changeImage(this)"/></th>
-            <th>5<img onclick="changeImage(this)"/></th>
-            <th>6<img onclick="changeImage(this)"/></th>
+            <th>4<img id="4" onclick="changeImage(this, 4)"/></th>
+            <th>5<img id="5" onclick="changeImage(this, 5)"/></th>
+            <th>6<img id="6" onclick="changeImage(this, 6)"/></th>
           </div>
         </tr>
         <tr>
           <div id="bottomRow">
-            <th>7<img onclick="changeImage(this)"/></th>
-            <th>8<img onclick="changeImage(this)"/></th>
-            <th>9<img onclick="changeImage(this)"/></th>
+            <th>7<img id="7" onclick="changeImage(this, 7)"/></th>
+            <th>8<img id="8" onclick="changeImage(this, 8)"/></th>
+            <th>9<img id="9" onclick="changeImage(this, 9)"/></th>
           </div>
         </tr>
       </table>
